Flicker when exiting element fullscreen. https://bugs.webkit.org/show_bug.cgi?id=192774 rdar://problem/33088878

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-12-20
Reviewed by Jer Noble.

Fixes an issue where the web page would flicker upon exiting element fullscreen.

Replace WebView with a snapshot while the WebView is restyled and resized for inline.

* UIProcess/mac/WKFullScreenWindowController.h:
* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController initWithWindow:webView:page:]):
(-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):
(-[WKFullScreenWindowController completeFinishExitFullScreenAnimationAfterRepaint]):

Canonical link: https://commits.webkit.org/207514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239475 268f45cc-cd09-0410-ab3c-d52691b4dbfc